Redis职责分离封装: RedisCacheHelper(缓存)+RedisLockHelper(锁/CAS)+RedisCounterHelper(计数), 业务侧不再直接依赖RedisTemplate